# bcbpy

./: .gitignore  BCB_API_REFERENCE.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: publish.yml  test-publish.yml
bcb_sgs/: __init__.py  client.py  codes.py  constants.py
tests/: test_client.py  test_codes.py  test_integration.py
