[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bcb-sgs"
version = "1.1.1"
description = "Python client for the Banco Central do Brasil SGS (Sistema Gerenciador de Series Temporais) API with 115 curated series codes for Brazilian economic and financial time series."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Rodrigo Teodoro", email = "rodrigoteodoro.90@gmail.com" },
]
keywords = [
    "bcb",
    "banco-central",
    "brasil",
    "brazil",
    "sgs",
    "economics",
    "finance",
    "time-series",
    "ipca",
    "selic",
    "cdi",
    "ptax",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Natural Language :: Portuguese (Brazilian)",
    "Natural Language :: English",
]
dependencies = [
    "pandas>=1.5",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build>=1.0",
    "twine>=4.0",
]

[project.urls]
Homepage = "https://github.com/TeodoroRodrigo/BCB"
Repository = "https://github.com/TeodoroRodrigo/BCB"
Issues = "https://github.com/TeodoroRodrigo/BCB/issues"
Changelog = "https://github.com/TeodoroRodrigo/BCB/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["bcb_sgs*"]
exclude = ["tests*"]
